--- a/TweetMe/Info.plist
+++ b/TweetMe/Info.plist
@@ -44,6 +44,19 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>WorkSans-Black.otf</string>
+		<string>WorkSans-Bold.otf</string>
+		<string>WorkSans-ExtraBold.otf</string>
+		<string>WorkSans-ExtraLight.otf</string>
+		<string>WorkSans-Hairline.otf</string>
+		<string>WorkSans-Light.otf</string>
+		<string>WorkSans-Medium.otf</string>
+		<string>WorkSans-Regular.otf</string>
+		<string>WorkSans-SemiBold.otf</string>
+		<string>WorkSans-Thin.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
